flickering issue resolved on left nav bar from summary page

--- a/src/app/pages/case-management/components/policy-violation-summary/policy-violation-summary.component.scss
+++ b/src/app/pages/case-management/components/policy-violation-summary/policy-violation-summary.component.scss
@@ -1,142 +1,127 @@
 h3.title {
-    font-size: 24px;
-    text-align: center !important;
-    color: $header-text !important;
-    margin-top: 1rem !important;
-    font-weight: 550;
+  font-size: 24px;
+  text-align: center !important;
+  color: $header-text !important;
+  margin-top: 1rem !important;
+  font-weight: 550;
 }
 
 img.profile-image.img-round {
-    width: 45px;
+  width: 45px;
 }
 
 button.btn.btn-sm {
-    padding: 3px 14px;
+  padding: 3px 14px;
 }
 
 span.reply {
-    color: #BDBDBD;
-    font-weight: 550;
-    cursor: pointer;
+  color: #bdbdbd;
+  font-weight: 550;
+  cursor: pointer;
 }
 
 textarea.form-control {
-    overflow: hidden;
-    min-height: 44px !important;
-    background: unset;
-    border: .6px solid #818181;
-    border-radius: 6px;
+  overflow: hidden;
+  min-height: 44px !important;
+  background: unset;
+  border: 0.6px solid #818181;
+  border-radius: 6px;
 }
 
 .row.user-item {
-    padding: inherit;
+  padding: inherit;
 }
 
 .buttonBg {
-    background: $button-bg !important;
-    color: $button-color !important;
+  background: $button-bg !important;
+  color: $button-color !important;
 }
 
 .dropdown-item:hover,
 .dropdown-item:focus {
-    background-color: #05ACD3;
+  background-color: #05acd3;
 }
 
 .actionDropDown {
-    margin-top: -2px;
-    border-radius: 0;
-    border-top: unset;
-    border-bottom-left-radius: 5px !important;
-    border-top-left-radius: 5px !important;
-    border-bottom-right-radius: 5px !important;
+  margin-top: -2px;
+  border-radius: 0;
+  border-top: unset;
+  border-bottom-left-radius: 5px !important;
+  border-top-left-radius: 5px !important;
+  border-bottom-right-radius: 5px !important;
 }
 
 hr {
-    border-bottom: 0.6px solid $hr-border;
-    width: 105%;
-}
-
-.card {
-    background: #0d1a25;
+  border-bottom: 0.6px solid $hr-border;
+  width: 105%;
 }
 
 .listedItem {
-    background: #202c36;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    border-radius: 4px;
-    .threat {
-        color: #8E8E8E;
-        padding-left: 6rem;
-    }
-    .threatTitle {
-        font-size: 15px;
-        padding: initial;
-    }
-    .threatValue {
-        font-size: smaller;
-        padding-top: 3px;
-    }
+  background: #202c36;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-radius: 4px;
+  .threat {
+    color: #8e8e8e;
+    padding-left: 6rem;
+  }
+  .threatTitle {
+    font-size: 15px;
+    padding: initial;
+  }
+  .threatValue {
+    font-size: smaller;
+    padding-top: 3px;
+  }
 }
 
 .comment {
-    color: #8E8E8E;
-    a {
-        padding-right: 3rem;
-    }
+  color: #8e8e8e;
+  a {
+    padding-right: 3rem;
+  }
 }
 
 .dtList {
-    color: #bdbdbd;
-    font-size: medium;
-    a {
-        text-decoration: underline;
-    }
+  color: #bdbdbd;
+  font-size: medium;
+  a {
+    text-decoration: underline;
+  }
 }
 
 .dlList {
-    padding-left: 1.5rem;
+  padding-left: 1.5rem;
 }
 
 .dotSeperator {
-    color: #bdbdbd;
-    font-size: large;
+  color: #bdbdbd;
+  font-size: large;
 }
 
 .fa-caret-right:before {
-    color: #5d5d5d;
+  color: #5d5d5d;
 }
 
 .policyBg {
-    background: #0d1a25;
+  background: #0d1a25;
 }
-
-
-/* dt {
-    color       : #BDBDBD;
-    // font-size: larger;
-}
-
-dd {
-    color       : #BDBDBD;
-    // font-size: large;
-} */
 
 .sideButton {
-    .btn {
-        background-color: unset;
-        color: #099bb5;
-        border: 1px solid #099bb5;
-        border-radius: 4px;
-    }
+  .btn {
+    background-color: unset;
+    color: #099bb5;
+    border: 1px solid #099bb5;
+    border-radius: 4px;
+  }
 }
 
 .action {
-    border-right: .6px solid #4B5965;
-    margin-top: .6rem;
-    margin-bottom: .6rem;
-    .btn {
-        padding: 5px 12px;
-        border-radius: 3px;
-    }
+  border-right: 0.6px solid #4b5965;
+  margin-top: 0.6rem;
+  margin-bottom: 0.6rem;
+  .btn {
+    padding: 5px 12px;
+    border-radius: 3px;
+  }
 }
